# Textbook-Translation---PDF-and-Text

./: README.md  app.py  package-lock.json  package.json  pyproject.toml
static/css/: style.css
static/js/: script.js
